Overflow fixes

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -28,6 +28,7 @@ body {
     color: $white;
     min-height: 100vh;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .flex-center {
